--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10.12] # Define Python versions here
+        python-version: [3.8, 3.9, 3.10]  # Testing across multiple Python versions
     services:
       postgres:
-        image: postgres:latest
+        image: postgres:13.3  # Using a specific version instead of 'latest'
         env:
           POSTGRES_USER: user
           POSTGRES_PASSWORD: password
@@ -45,9 +45,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
+      - name: Static Code Analysis (Quality & Security)
+        uses: github/super-linter@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run tests with Pytest
         env:
-          DATABASE_URL: postgresql+asyncpg://user:password@localhost:5432/myappdb  # Configure the DATABASE_URL environment variable for tests
+          DATABASE_URL: postgresql+asyncpg://user:password@localhost:5432/myappdb
         run: pytest
 
   build-and-push-docker:
@@ -70,16 +75,16 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: kaw393939/wis_club_api:${{ github.sha }} # Uses the Git SHA for tagging
-          platforms: linux/amd64,linux/arm64 # Multi-platform support
+          tags: kaw393939/wis_club_api:${{ github.ref_name }}-${{ github.sha }}
+          platforms: linux/amd64,linux/arm64
           cache-from: type=registry,ref=kaw393939/wis_club_api:cache
           cache-to: type=inline,mode=max
           
       - name: Scan the Docker image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'kaw393939/wis_club_api:${{ github.sha }}'
+          image-ref: 'kaw393939/wis_club_api:${{ github.ref_name }}-${{ github.sha }}'
           format: 'table'
-          exit-code: '1' # Fail the job if vulnerabilities are found
+          exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
